fix language account connection